Higher contrast role-specific colors + fix translation error

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -217,7 +217,7 @@ code, .code {
     --secondary-color: #422137;
     --text-color: #ffffff;
     --primary-border-color: #5a3246;
-    --primary-border-shadow-color: #2b1621;
+    --primary-border-shadow-color: #25141d;
     --background-border-color: #50303e;
     --background-border-shadow-color: #25131c;
     --hover-color: #4c2337;
